--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,10 @@
     "color": "^3.1.2",
     "core-js": "^3.6.5",
     "graphql-tag": "^2.11.0",
+    "hls.js": "^0.14.17",
     "hotkeys-js": "^3.8.1",
     "moment": "^2.27.0",
+    "plyr": "^3.6.3",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-advanced-cropper": "^0.16.1",
